--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ torch==2.1.1
 torchvision==0.16.1
 tqdm==4.65.0
 wandb==0.17.5
-numpy==1.26.4
-scipy==1.11.4
-matplotlib==3.8.0
-seaborn==0.12.2
-scikit-learn==1.2.2
+scipy==1.10.1
+matplotlib==3.7.5
+seaborn==0.13.2
+scikit-learn==1.3.2
+einops==0.8.0
